--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,7 @@
-PORT = 3000,
+PORT = 3000
 NODE_ENV = development
+
+DB_LOCAL_URI = mongodb://localhost:27017/jobs
+
+GEOCODER_PROVIDER = mapquest
+GEOCODER_API_KEY = luiJ3I2gupkssBypbqCJyEhF9VPLwdpq
