--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "prod": "SET NODE_ENV=production & nodemon app.js"
   },
   "author": "Iddrisu Sumaila",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.2",
+    "node-geocoder": "^3.27.0",
+    "nodemon": "^2.0.7",
+    "slugify": "^1.5.0",
+    "validator": "^13.5.2"
   }
 }
