--- a/config/config.env
+++ b/config/config.env
@@ -1,7 +1,23 @@
 PORT = 3000
-NODE_ENV = production
+NODE_ENV = development
 
 DB_LOCAL_URI = mongodb://localhost:27017/jobs
 
 GEOCODER_PROVIDER = mapquest
 GEOCODER_API_KEY = luiJ3I2gupkssBypbqCJyEhF9VPLwdpq
+
+JWT_SECRET = 30404505403040tjvfmnmbasdsdgk
+JWT_EXPIRES_TIME = 7d
+
+COOKIE_EXPIRES_TIME = 7
+
+
+SMTP_HOST = smtp.mailtrap.io
+SMTP_PORT = 2525
+SMTP_EMAIL = b3d4f991feaaf5
+SMTP_PASSWORD = bb1dd04a1f36c0 
+SMTP_FROM_EMAIL = noreply@jobbe.com
+SMTP_FROM_NAME = jobbe
+
+MAX_FILE_SIZE = 2000000
+UPLOAD_PATH = ./public/upload
