--- a/package.json
+++ b/package.json
@@ -12,12 +12,23 @@
   "author": "Iddrisu Sumaila",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.12.2",
     "node-geocoder": "^3.27.0",
-    "nodemon": "^2.0.7",
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
     "slugify": "^1.5.0",
-    "validator": "^13.5.2"
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   }
 }
